--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,7 +31,8 @@
     "react-native-nfc-manager": "^3.17.2",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
