--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.1.0",
     "nanoid": "^5.1.6",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
