--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.1",
     "@react-navigation/stack": "^7.6.7",
+    "@socket.io/component-emitter": "^3.1.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.13.2",
@@ -31,8 +32,7 @@
     "react-native-nfc-manager": "^3.17.2",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-vector-icons": "^10.3.0",
-    "socket.io-client": "^4.8.3"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
